--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "5.1.1",
     "html-webpack-plugin": "4.2.0",
+    "lodash.merge": "4.6.2",
     "typescript": "3.8.3",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
