--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "babel-plugin-styled-components": "1.11.1",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6.1.0",
+    "css-loader": "4.3.0",
     "html-webpack-plugin": "4.4.1",
     "lodash.merge": "4.6.2",
+    "sass": "1.26.11",
+    "sass-loader": "10.0.2",
+    "style-loader": "1.2.1",
     "typescript": "4.0.2",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
