--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6.1.1",
     "css-loader": "4.3.0",
+    "file-loader": "6.1.1",
     "html-webpack-plugin": "4.5.0",
     "lodash.merge": "4.6.2",
     "sass": "1.26.11",
