--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "styled-components": "5.2.0"
   },
   "dependencies": {
-    "@babel/core": "7.11.6",
-    "@babel/preset-env": "7.11.5",
+    "@babel/core": "7.12.3",
+    "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
     "@types/react": "16.9.53",
     "@types/react-dom": "16.9.8",
@@ -25,17 +25,17 @@
     "babel-loader": "8.1.0",
     "babel-plugin-styled-components": "1.11.1",
     "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "6.1.1",
-    "css-loader": "4.3.0",
+    "copy-webpack-plugin": "6.2.1",
+    "css-loader": "5.0.0",
     "file-loader": "6.1.1",
-    "html-webpack-plugin": "4.5.0",
+    "html-webpack-plugin": "5.0.0-alpha.6",
     "lodash.merge": "4.6.2",
-    "sass": "1.26.11",
-    "sass-loader": "10.0.2",
-    "style-loader": "1.2.1",
+    "sass": "1.27.0",
+    "sass-loader": "10.0.3",
+    "style-loader": "2.0.0",
     "typescript": "4.0.3",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.12",
+    "webpack": "5.1.3",
+    "webpack-cli": "4.1.0",
     "webpack-dev-server": "3.11.0"
   },
   "authors": [
