--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "awesome-typescript-loader": "5.2.1",
     "babel-loader": "8.2.1",
     "babel-plugin-styled-components": "1.11.1",
+    "build-info-webpack-plugin": "1.0.0",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6.3.1",
     "css-loader": "5.0.1",
