--- a/package.json
+++ b/package.json
@@ -16,26 +16,26 @@
     "styled-components": "5.2.1"
   },
   "dependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/preset-env": "7.12.11",
-    "@babel/preset-react": "7.12.10",
-    "@types/react": "17.0.1",
-    "@types/react-dom": "17.0.0",
+    "@babel/core": "7.13.8",
+    "@babel/preset-env": "7.13.8",
+    "@babel/preset-react": "7.12.13",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.1",
     "awesome-typescript-loader": "5.2.1",
     "babel-loader": "8.2.2",
     "babel-plugin-styled-components": "1.12.0",
     "build-info-webpack-plugin": "1.0.1",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "7.0.0",
-    "css-loader": "5.0.1",
+    "css-loader": "5.1.0",
     "file-loader": "6.2.0",
-    "html-webpack-plugin": "5.0.0-alpha.14",
+    "html-webpack-plugin": "5.2.0",
     "lodash.merge": "4.6.2",
-    "sass": "1.32.6",
-    "sass-loader": "10.1.1",
+    "sass": "1.32.8",
+    "sass-loader": "11.0.1",
     "style-loader": "2.0.0",
-    "typescript": "4.1.3",
-    "webpack": "5.20.0",
+    "typescript": "4.2.2",
+    "webpack": "5.24.2",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2"
   },
