--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "5.2.3"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.2.3"
   },
   "dependencies": {
     "@babel/core": "7.13.15",
