--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "@babel/preset-react": "7.14.5",
     "@types/react": "17.0.19",
     "@types/react-dom": "17.0.9",
-    "awesome-typescript-loader": "5.2.1",
     "babel-loader": "8.2.2",
     "babel-plugin-styled-components": "1.13.2",
-    "build-info-webpack-plugin": "1.0.1",
+    "build-info-webpack-plugin": "1.0.2",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "9.0.1",
     "css-loader": "6.2.0",
@@ -34,6 +33,7 @@
     "sass": "1.39.0",
     "sass-loader": "12.1.0",
     "style-loader": "3.2.1",
+    "ts-loader": "9.2.5",
     "typescript": "4.4.2",
     "webpack": "5.52.0",
     "webpack-cli": "4.8.0",
