--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "trailingComma": "none",
   "overrides": [
     {
-      "files": ["*.json", ".*rc"],
+      "files": ["*.json", ".*rc", "*.md"],
       "options": {
         "tabWidth": 2
       }
